--- a/css/styles.css
+++ b/css/styles.css
@@ -841,12 +841,6 @@ h3 {
   margin-bottom: 80px;
 }
 
-/*.ind-description-name {
-  margin-top: 20px;
-  font-size: 1.25em;
-  font-weight: 300;
-
-}*/
 
 .button_container {
   position: fixed;
@@ -916,6 +910,11 @@ h3 {
   margin-right: 20px;
 }
 
+.long-name h3 {
+  font-size: .5em;
+  color: red;
+}
+
 
 }
 
@@ -930,6 +929,12 @@ h3 {
   margin-right: 20px;
     
 }
+
+.long-name h3 {
+  font-size: .5em;
+  color: red;
+}
+
 
 
 
